--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -1,6 +1,9 @@
 * {
     padding: 0;
     margin: 0;
+}
+
+body {
     background: #E5E5E5;
 }
 
@@ -31,4 +34,21 @@ a {
     line-height: 140%;
     text-align: center;
     color: #808080;
+}
+
+@media screen and (min-width: 1150px) { 
+    .app-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@media screen and (max-width: 700px) { 
+    .app-wrapper {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
