--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,4 +1,5 @@
 .header-wrapper {
+    width: 100%;
     background-color: #0564eb !important;
     display: flex;
     flex-direction: row;
@@ -32,3 +33,25 @@
     outline: 0;
     background: #fff;
 }
+
+@media screen and (min-width: 1300px) { 
+    .header-wrapper {
+        justify-content: center;
+    }
+}
+
+@media screen and (max-width: 700px) { 
+    .githubLogo {
+        margin-left: 0px;
+        margin-right: 10px;
+    }
+
+    .header-wrapper {
+        width: 100%;
+        justify-content: center;
+    }
+
+    .form-wrapper {
+        width: 70%;
+    }
+} 
